# CapstonePlayground

client/: README.md  package.json
client/src/views/: Home.vue
server/: README.md  dev.sh  pyproject.toml
server/server/: __init__.py
server/server/src/: server.py
server/tests/: test_server.py
