[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Alexander Schnapp <a@schnapp.co>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
